public/assets/css/custom.css
.sidebar {
    z-index: 5 !important;
}

.sidebar .sidebar-menu>ul>li>a .menu-arrow {
    font-size: 14px;
}

.sidebar .sidebar-menu>ul>li>a.subdrop {
    border-radius: 5px;
    background-color: rgb(27 40 80 / var(--tw-bg-opacity, 1)) !important;
    color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
}


.sidebar .sidebar-menu>ul>li>a.subdrop span,
.sidebar .sidebar-menu>ul>li>a.subdrop img {
    color: white;
    filter: brightness(0) invert(1) !important;

}

.sidebar .sidebar-menu>ul>li>a.subdrop:hover img {
    filter: brightness(0) invert(1) !important;
    color: white !important;

}

.customizer-links {
    display: none !important;
}

.header .user-img img {
    margin-top: 0;
}



.login-wrapper .login-content {
    padding: 0;
    width: 30%;
}

.login-wrapper .login-userset {
    padding: 30px;
}

.form-group {
    margin-bottom: 16px;
}

.form-group input[type=number],
.form-group input[type=email] {
    height: 2.5rem;
    width: 100%;
    border-width: 1px;
    border-color: rgba(145, 158, 171, 0.32);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 15px;
    padding-right: 15px;
    font-size: 0.875rem;
    line-height: 1.25rem;
    font-weight: 500;
    --tw-text-opacity: 1;
    color: rgb(99 115 129 / var(--tw-text-opacity, 1));
    border-radius: 5px;
}

.form-group input[type=number]:focus,
.form-group input[type=email]:focus,
.form-group textarea:focus {
    border-width: 1px;
    --tw-border-opacity: 1;
    border-color: rgb(255 159 67 / var(--tw-border-opacity, 1));
    --tw-bg-opacity: 1;
    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
    --tw-ring-color: transparent;
}

.form-group textarea {
    width: 100%;
    border-width: 1px;
    border-color: rgba(145, 158, 171, 0.32);
    font-size: 0.875rem;
    font-weight: 500;
    --tw-text-opacity: 1;
    color: rgb(99 115 129 / var(--tw-text-opacity, 1));
    border-radius: 5px;
}

@media (max-width: 640px) {
    .sidebar {
        margin-left: -650px;
    }

    .login-wrapper .login-content {
        width: 100%;
    }

    .login-wrapper .login-userset {
        padding: 20px;
    }
}

.slide-nav .sidebar {
    margin-left: 0px;
    z-index: 999 !important;
}

.tab-btn[aria-selected="true"] {
    color: var(--color-primary-500) !important;
    border-color: var(--color-primary-500) !important;
}

.page-tab-menu {
    width: 210px;
    padding: 14px;
    background: var(--color-neutral-100);
    border-radius: 5px;

}

.page-tab-content {
    flex: 1;
}

.industry-focus {
    .image-upload .image-uploads {
        padding-top: 0;
        padding-bottom: 0;

    }

    .image-upload input[type=file] {
        height: 40px;
    }

    .image-upload {
        width: 120px;
        height: 40px;
    }
}

.sidebar .sidebar-menu>ul>li.submenu ul li a:hover {
    color: var(--color-primary-500) !important;
}

.submenu ul li.active a {
    color: var(--color-primary-500) !important;
}

.sidebar .sidebar-menu>ul>li.submenu ul li a:hover:after {
    border-color: var(--color-primary-500) !important;
    background-color: var(--color-primary-500) !important;
}

.submenu ul li.active a:after {
    border-color: var(--color-primary-500) !important;
    background-color: var(--color-primary-500) !important;
}

.btn-submit {
    background: var(--color-primary-500);
}

.btn-submit:hover {
    background: var(--color-primary-600);
}


.form-group input[type=number]:focus,
.form-group input[type=email]:focus,
.form-group textarea:focus {
    border-color: var(--color-primary-500) !important;
}

.form-group input[type=text]:focus,
.form-group input[type=textarea]:focus {
    border-color: var(--color-primary-500) !important;

}

/* Scrollbar Width */


/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Thumb */
::-webkit-scrollbar-thumb {
    background: var(--color-primary-500);
}

/* Thumb Hover */
::-webkit-scrollbar-thumb:hover {
    background: var(--color-primary-500);
}

.header .user-img {
    display: flex;
}

.sidebar .sidebar-menu>ul>li.submenu ul li a {
    padding-top: 0.3rem;
    padding-bottom: 0.3rem;
    padding-left: 2.2rem;
}

.sidebar .sidebar-menu>ul>li.submenu ul {
    flex-direction: column;
    gap: 8px;
}

.sidebar .sidebar-menu>ul>li.submenu ul li a::after {
    top: 10px;
}

.select2-container--focus .select2-selection--single {
    border-color: var(--color-primary-500);
}

.select2-container--default .select2-results__option--highlighted[aria-selected] {
    background-color: var(--color-primary-500);
}

.ql-editor.ql-blank {
    min-height: 110px !important;
}

.ql-toolbarql-snow {
    border-radius: 4px !important;
}


.login-wrapper .login-content .form-login .btn-login {
    border-color: var(--color-primary-500);
    background-color: var(--color-primary-500);
    color: var(--color-white);
}

.login-wrapper .login-content .form-login .btn-login:hover {
    color: var(--color-primary-500);
}

.login-wrapper .login-content .form-login .alreadyuser h4 a {
    color: var(--color-primary-500);
}

.login-wrapper .login-content .form-login .alreadyuser h4 a:hover {
    color: var(--color-primary-500) !important;
    border-color: var(--color-primary-500);

}

.login-wrapper .login-content .form-sociallink ul li a:hover {
    background-color: var(--color-primary-500);
    color: var(--color-white);
}

.login-wrapper .login-content .form-login input:focus {
    border-color: var(--color-primary-500) !important;
    --tw-ring-color: var(--color-primary-500) !important;
}


.image-upload {
    margin-bottom: 10px;
}

.preview-image {
    width: 120px;
    height: 120px;
    img{
        width: 100% !important;
        height: 100% !important;
        object-fit: cover;
        border-radius: 5px;
    }
}

